// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Badge Component should append classNames when attribute is passed in 1`] = `
<strong
  class="phase-tag my-additional-classname"
>
  Sample Text
</strong>
`;

exports[`The Badge Component should render children that are passed in 1`] = `
<strong
  class="phase-tag"
>
  Sample Text
</strong>
`;
